--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -34,7 +34,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+.sticky-navbar{
+  background-color: #fff;
+  padding: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
