--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,12 @@ a {
   padding: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
+.first-sec{
+  padding: 50px;
+}
+.mb{
+  margin-bottom: 50px;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
